(missing from yesterday's commit) sonar: Performance - Method invokes inefficient Number constructor; use static valueOf instead
sonar: Correctness - Nullcheck of value previously dereferenced

braces for one-line, indented ifs/whiles

git-svn-id: https://svn.apache.org/repos/asf/jspwiki/trunk@1553662 13f79535-47bb-0310-9956-ffa450edef68